Ensure header covers full page width on phone (fixes #44)

--- a/app/assets/stylesheets/application/gotv.scss
+++ b/app/assets/stylesheets/application/gotv.scss
@@ -5,6 +5,11 @@ $primary: $labour-pink;
 @import "bulma";
 html {
   font-size: 120%;
+
+  // Ensure rest of page is always at least as big as minimum size main
+  // dashboard table will shrink to, so header will still cover full page width
+  // in this case.
+  min-width: 650px;
 }
 
 abbr {
